feat: add experimental support for Virtual Threads